--- a/two_one_finished.ipynb
+++ b/two_one_finished.ipynb
@@ -120,25 +120,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Composite and Z score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "results_df['composite_score'] = (results_df['spectral_centroid'] * results_df['mean_cepstral_coeff']) / results_df['spectral_flatness']\n",
-    "\n",
-    "results_df[['z_spectral_centroid', 'z_spectral_flatness', 'z_mean_cepstral_coeff']] = results_df[['spectral_centroid', 'spectral_flatness', 'mean_cepstral_coeff']].apply(zscore)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Fourier and cepstral analysis"
    ]
   },
@@ -414,7 +395,7 @@
     "\n",
     "misclassified_samples_display = misclassified_samples[\n",
     "    ['subject', 'diagnosis', 'refined_predicted_class', 'spectral_centroid', \n",
-    "     'spectral_flatness', 'mean_cepstral_coeff', 'composite_score']\n",
+    "     'spectral_flatness', 'mean_cepstral_coeff']\n",
     "]\n",
     "\n",
     "print(\"Misclassified Samples:\")\n",
